[#924] Support tab spacing issues

--- a/code/wp-content/themes/Akvo-responsive/css/main.scss
+++ b/code/wp-content/themes/Akvo-responsive/css/main.scss
@@ -7629,7 +7629,7 @@ $lightBlue: #72CDFF;
 		
 		.twoColumns div{
 			width: 30%;
-			padding: 9%;
+			padding: 1em 9%;
 		}
 	}
 	
